# walking-dog

./: .gitignore  CLAUDE.md
.claude/: hookify.block-python-json.local.md  hookify.block-terraform.local.md  settings.json
.claude/agents/: implementer-api_ja.md  implementer-infra_ja.md  implementer-mobile_ja.md  inspector_ja.md  pge-evaluator.md  pge-generator.md  pge-planner.md  tester_ja.md
.claude/commands/: dev_ja.md  pge.md
.claude/hooks/: guard_commands.py  guard_npm.py  plan-preview.sh
.claude/plans/: abundant-jumping-rabbit.md  cheerful-jumping-acorn.md  compiled-puzzling-eclipse.md  concurrent-moseying-peach.md  dapper-noodling-ripple.md  docs-design-walking-dog-readme-md-tab-1-peaceful-turing.md  dynamic-drifting-breeze.md  harmonic-skipping-cerf.md  jiggly-munching-hopcroft.md  lexical-moseying-fog.md  mutable-brewing-dragonfly.md  parsed-watching-turing.md  polymorphic-sparking-wozniak.md  reactive-wibbling-karp.md  rosy-yawning-toucan.md  soft-scribbling-twilight.md  swirling-wondering-elephant.md  vast-wishing-pony.md  virtual-honking-newt.md  zazzy-bubbling-koala.md  zazzy-herding-sunset.md
.github/workflows/: deploy-api.yml  test-api.yml  test-mobile.yml
apps/: compose.yml  mobile.yml
apps/api/: .env.example  .env.local  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  compose.yml
apps/api/migration/: Cargo.toml
apps/api/migration/src/: lib.rs  m20260321_000001_create_users.rs  m20260321_000002_create_dogs.rs  m20260321_000003_create_walks.rs  m20260321_000004_create_walk_dogs.rs  m20260404_000001_create_dog_members_and_invitations.rs  m20260407_000001_create_encounters_and_friendships.rs  m20260412_000001_create_walk_events.rs  main.rs
apps/api/src/: config.rs  error.rs  lib.rs  main.rs
apps/api/src/auth/: jwt.rs  mod.rs  service.rs
apps/api/src/aws/: client.rs
apps/api/src/entities/: dog_invitations.rs  dog_members.rs  dogs.rs  encounters.rs  friendships.rs  mod.rs  prelude.rs  users.rs  walk_dogs.rs  walk_events.rs  walks.rs
apps/api/src/graphql/: auth_helpers.rs  context.rs  custom_mutations.rs  custom_queries.rs  mod.rs
apps/api/src/graphql/.claude/hooks/: guard_npm.py
apps/api/src/graphql/input/: birth_date.rs  mod.rs
apps/api/src/graphql/mutation/: dog.rs  user.rs  walk.rs
apps/api/src/graphql/mutations/: auth.rs  dog.rs  dog_member.rs  encounter.rs  mod.rs  photo.rs  walk.rs  walk_event.rs
apps/api/src/graphql/query/: dog.rs  mod.rs  user.rs  walk.rs
apps/api/src/graphql/types/: dog.rs  user.rs  walk.rs
apps/api/src/services/: dog_invitation_service.rs  dog_member_service.rs  dog_service.rs  encounter_service.rs  friendship_service.rs  mod.rs  s3_service.rs  user_service.rs  walk_event_service.rs  walk_points_service.rs  walk_service.rs
apps/api/tests/: test_authorization.rs  test_dog.rs  test_dog_invitation.rs  test_dog_member.rs  test_encounter.rs  test_encounter_flow.rs  test_health.rs  test_review_fixes.rs  test_sharing_flow.rs  test_user.rs  test_walk.rs  test_walk_events.rs
apps/api/tests/common/: mod.rs
apps/api/tests/support/: client.rs  fixtures.rs  mod.rs  tokens.rs
apps/cognito-local/: .gitignore
scripts/: reset-cognito.sh  setup.sh
tasks/: lessons.md
(+431 files in other folders)
