[workspace]
members = [".", "migration"]
resolver = "2"

[package]
name = "walking-dog-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
async-graphql = { version = "~7.0.17", features = ["chrono", "uuid", "dataloader", "dynamic-schema"] }
async-graphql-axum = "7"
sea-orm = { version = "~2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "with-json", "seaography"] }
seaography = { version = "~2.0.0-rc", features = ["field-camel-case", "schema-meta", "macros"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cognitoidentityprovider = "1"
aws-types = "1"
migration = { path = "migration" }
sea-orm-migration = { version = "~2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
rand = "0.8"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
aws-smithy-mocks-experimental = "0.2"
